{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 572,
  "lineage": "77ebb6f0-5536-8cea-05fd-e1f4a024d14c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "reflek_web_alb_tg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:638987496525:targetgroup/reflek-web-alb-tg/ebd2b2ec2e4e99f3",
            "arn_suffix": "targetgroup/reflek-web-alb-tg/ebd2b2ec2e4e99f3",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:638987496525:targetgroup/reflek-web-alb-tg/ebd2b2ec2e4e99f3",
            "lambda_multi_value_headers_enabled": false,
            "name": "reflek-web-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0457a8c5185c39e8e"
          },
          "dependencies": [
            "aws_vpc.reflek_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "reflek_eip_nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0e4b90896861188ee",
            "public_dns": "ec2-3-6-111-53.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.6.111.53",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0620d12a9cf777c87",
            "arn": "arn:aws:ec2:ap-south-1:638987496525:instance/i-07c2bc6f1e7f5cfa4",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07c2bc6f1e7f5cfa4",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "reflek_ssh_key",
            "monitoring": false,
            "primary_network_interface_id": "eni-009090650c91e0930",
            "private_dns": "ip-10-0-1-171.ap-south-1.compute.internal",
            "private_ip": "10.0.1.171",
            "public_dns": "ec2-13-232-70-7.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.232.70.7",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-03c9d05d7ee22c316",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-03bad10f178235be7"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a336e6031d9e1ca9",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03bad10f178235be7"
            ]
          },
          "dependencies": [
            "aws_key_pair.bastion_key",
            "aws_security_group.bastion-sg",
            "aws_subnet.reflek_pub_subnet",
            "aws_vpc.reflek_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "reflek_IG",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0e578c2de3eaf6e3f",
            "owner_id": "638987496525",
            "tags": {
              "Name": "reflek_IG"
            },
            "vpc_id": "vpc-0457a8c5185c39e8e"
          },
          "dependencies": [
            "aws_vpc.reflek_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "reflek_web_lb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:638987496525:loadbalancer/app/reflek-web-lb/75c47de828854c1f",
            "arn_suffix": "app/reflek-web-lb/75c47de828854c1f",
            "dns_name": "reflek-web-lb-507735179.ap-south-1.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:638987496525:loadbalancer/app/reflek-web-lb/75c47de828854c1f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "reflek-web-lb",
            "security_groups": [
              "sg-0c15dc35e634dd5cb"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06bc3fcfa2e209928"
              },
              {
                "subnet_id": "subnet-0a336e6031d9e1ca9"
              }
            ],
            "subnets": [
              "subnet-06bc3fcfa2e209928",
              "subnet-0a336e6031d9e1ca9"
            ],
            "tags": {
              "Name": "EXTERNAL-ALB"
            },
            "vpc_id": "vpc-0457a8c5185c39e8e",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_internet_gateway.reflek_IG",
            "aws_security_group.reflek_sg_web_lb",
            "aws_subnet.reflek_pub_subnet",
            "aws_vpc.reflek_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:638987496525:listener/app/reflek-web-lb/75c47de828854c1f/01f66e4a88921401",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:638987496525:targetgroup/reflek-web-alb-tg/ebd2b2ec2e4e99f3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:638987496525:listener/app/reflek-web-lb/75c47de828854c1f/01f66e4a88921401",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:638987496525:loadbalancer/app/reflek-web-lb/75c47de828854c1f",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_alb_target_group.reflek_web_alb_tg",
            "aws_internet_gateway.reflek_IG",
            "aws_lb.reflek_web_lb",
            "aws_security_group.reflek_sg_web_lb",
            "aws_subnet.reflek_pub_subnet",
            "aws_vpc.reflek_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "reflek_nat_gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e4b90896861188ee",
            "id": "nat-0d7aefb2dbb8dd4d7",
            "network_interface_id": "eni-0f7af1d2dfa70830b",
            "private_ip": "10.0.2.90",
            "public_ip": "3.6.111.53",
            "subnet_id": "subnet-06bc3fcfa2e209928"
          },
          "dependencies": [
            "aws_eip.reflek_eip_nat",
            "aws_subnet.reflek_pub_subnet",
            "aws_vpc.reflek_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "reflek_pri_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02dd5dd9ded92c423",
            "owner_id": "638987496525",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0d7aefb2dbb8dd4d7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "reflek_pri_route_table"
            },
            "vpc_id": "vpc-0457a8c5185c39e8e"
          },
          "dependencies": [
            "aws_eip.reflek_eip_nat",
            "aws_nat_gateway.reflek_nat_gw",
            "aws_subnet.reflek_pub_subnet",
            "aws_vpc.reflek_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "reflek_pub_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-069cf9335d60715ab",
            "owner_id": "638987496525",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e578c2de3eaf6e3f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "reflek_pub_route_table"
            },
            "vpc_id": "vpc-0457a8c5185c39e8e"
          },
          "dependencies": [
            "aws_internet_gateway.reflek_IG",
            "aws_vpc.reflek_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "reflek_pri_route_associate",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06090bd1a4736427a",
            "route_table_id": "rtb-02dd5dd9ded92c423",
            "subnet_id": "subnet-07e64d8332127b994"
          },
          "dependencies": [
            "aws_eip.reflek_eip_nat",
            "aws_nat_gateway.reflek_nat_gw",
            "aws_route_table.reflek_pri_route_table",
            "aws_subnet.reflek_pri_subnet",
            "aws_subnet.reflek_pub_subnet",
            "aws_vpc.reflek_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f330d191534aca93",
            "route_table_id": "rtb-02dd5dd9ded92c423",
            "subnet_id": "subnet-06a9900f4ba4eff77"
          },
          "dependencies": [
            "aws_eip.reflek_eip_nat",
            "aws_nat_gateway.reflek_nat_gw",
            "aws_route_table.reflek_pri_route_table",
            "aws_subnet.reflek_pri_subnet",
            "aws_subnet.reflek_pub_subnet",
            "aws_vpc.reflek_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "reflek_pub_route_associate",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09b309dbdc0633f29",
            "route_table_id": "rtb-069cf9335d60715ab",
            "subnet_id": "subnet-0a336e6031d9e1ca9"
          },
          "dependencies": [
            "aws_internet_gateway.reflek_IG",
            "aws_route_table.reflek_pub_route_table",
            "aws_subnet.reflek_pub_subnet",
            "aws_vpc.reflek_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bac63e7f607e02ee",
            "route_table_id": "rtb-069cf9335d60715ab",
            "subnet_id": "subnet-06bc3fcfa2e209928"
          },
          "dependencies": [
            "aws_internet_gateway.reflek_IG",
            "aws_route_table.reflek_pub_route_table",
            "aws_subnet.reflek_pub_subnet",
            "aws_vpc.reflek_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:638987496525:security-group/sg-03bad10f178235be7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03bad10f178235be7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "bastion-security-group",
            "name_prefix": null,
            "owner_id": "638987496525",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0457a8c5185c39e8e"
          },
          "dependencies": [
            "aws_vpc.reflek_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "reflek_fronted_asg_config_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:638987496525:security-group/sg-057224bb65e6b72ef",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-057224bb65e6b72ef",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "50",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 2377,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2377
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 4789,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 4789
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 7946,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 7946
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 7946,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 7946
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 9100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9100
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03bad10f178235be7"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c15dc35e634dd5cb"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c15dc35e634dd5cb"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03bad10f178235be7"
                ],
                "self": false,
                "to_port": 9090
              }
            ],
            "name": "reflek_fronted_asg_config_sg",
            "name_prefix": null,
            "owner_id": "638987496525",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0457a8c5185c39e8e"
          },
          "dependencies": [
            "aws_internet_gateway.reflek_IG",
            "aws_security_group.bastion-sg",
            "aws_security_group.reflek_sg_web_lb",
            "aws_vpc.reflek_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "reflek_sg_web_lb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:638987496525:security-group/sg-0c15dc35e634dd5cb",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c15dc35e634dd5cb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "reflek_sg_web_lb",
            "name_prefix": null,
            "owner_id": "638987496525",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0457a8c5185c39e8e"
          },
          "dependencies": [
            "aws_internet_gateway.reflek_IG",
            "aws_vpc.reflek_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "reflek_pri_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:638987496525:subnet/subnet-07e64d8332127b994",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-07e64d8332127b994",
            "map_public_ip_on_launch": false,
            "owner_id": "638987496525",
            "tags": {
              "Name": "reflek_pri_subnet_0"
            },
            "vpc_id": "vpc-0457a8c5185c39e8e"
          },
          "dependencies": [
            "aws_vpc.reflek_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:638987496525:subnet/subnet-06a9900f4ba4eff77",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-06a9900f4ba4eff77",
            "map_public_ip_on_launch": false,
            "owner_id": "638987496525",
            "tags": {
              "Name": "reflek_pri_subnet_1"
            },
            "vpc_id": "vpc-0457a8c5185c39e8e"
          },
          "dependencies": [
            "aws_vpc.reflek_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "reflek_pub_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:638987496525:subnet/subnet-0a336e6031d9e1ca9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0a336e6031d9e1ca9",
            "map_public_ip_on_launch": true,
            "owner_id": "638987496525",
            "tags": {
              "Name": "reflek_pub_subnet_0"
            },
            "vpc_id": "vpc-0457a8c5185c39e8e"
          },
          "dependencies": [
            "aws_vpc.reflek_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:638987496525:subnet/subnet-06bc3fcfa2e209928",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-06bc3fcfa2e209928",
            "map_public_ip_on_launch": true,
            "owner_id": "638987496525",
            "tags": {
              "Name": "reflek_pub_subnet_1"
            },
            "vpc_id": "vpc-0457a8c5185c39e8e"
          },
          "dependencies": [
            "aws_vpc.reflek_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "reflek_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:638987496525:vpc/vpc-0457a8c5185c39e8e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b9e7046a1a165177",
            "default_route_table_id": "rtb-05c1c5ac74d311c8f",
            "default_security_group_id": "sg-042d36294f4eb5d56",
            "dhcp_options_id": "dopt-a640aacd",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0457a8c5185c39e8e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05c1c5ac74d311c8f",
            "owner_id": "638987496525",
            "tags": {
              "Name": "reflek_vpc"
            }
          }
        }
      ]
    }
  ]
}